@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.ws.rs.Path;
 import javax.ws.rs.core.Application;
@@ -43,6 +42,6 @@ public class RestApiTester {
         return config.getClasses().stream()
                 .filter(c -> c.getAnnotation(Path.class) != null)
                 .filter(c -> !UNNTATT.contains(c))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
